--- a/docker/local/django/Dockerfile
+++ b/docker/local/django/Dockerfile
@@ -6,11 +6,8 @@ ENV PYTHONDONOTWRITEBYTECODE 1
 ENV PYTHONUNBUFFERED 1
 
 RUN apt-get update \
-  && apt-get install -y build-essential \
-  && apt-get install -y libpq-dev \
-  && apt-get install -y gettext \
-  && apt-get -y install netcat-openbsd gcc postgresql \
-  && apt-get purge -y --auto-remove -o APT::AutoRemove::RecommendsImportant=false \
+  && apt-get install -y --no-install-recommends \
+     gettext \
   && rm -rf /var/lib/apt/lists/*
 
 RUN pip install --upgrade pip
