feat(frontend): add property

--- a/docker/local/django/Dockerfile
+++ b/docker/local/django/Dockerfile
@@ -10,11 +10,9 @@ RUN apt-get update \
      gettext \
   && rm -rf /var/lib/apt/lists/*
 
-RUN pip install --upgrade pip
-
 COPY ./requirements.txt .
 
-RUN pip install -r requirements.txt
+RUN pip install --upgrade pip && pip install -r requirements.txt
 
 COPY . .
 
