--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ phonenumbers==9.0.3
 django-countries==7.6.1
 phonenumbers==9.0.3
 pillow==11.3.0
+django-filter==25.1
 redis==6.0.0
 celery==5.5.3
 flower==2.0.1
