--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,15 +4,20 @@ services:
       context: .
       dockerfile: ./docker/local/django/Dockerfile
     command: /start
-    volumes: 
+    volumes:
       - .:/app
+      - static_volume:/app/static
+      - media_volume:/app/media
     env_file:
       - .env
     ports:
       - 8000:8000
+    expose:
+      - 8000
     depends_on:
       - db
       - redis
+      - daphne
     networks:
       - booking-site
 
@@ -64,10 +69,46 @@ services:
       - db
     networks:
       - booking-site
-  
+
+  daphne:
+    build:
+      context: .
+      dockerfile: ./docker/local/django/Dockerfile
+    command: daphne -b 0.0.0.0 -p 8001 booking_site.asgi:application
+    volumes:
+      - .:/app
+    env_file:
+      - .env
+    ports:
+      - 8001:8001
+    expose:
+      - 8001
+    depends_on:
+      - db
+      - redis
+    networks:
+      - booking-site
+
+  nginx:
+    restart: always
+    depends_on:
+      - api
+    volumes:
+      - static_volume:/app/static
+      - media_volume:/app/media
+    build:
+      context: ./docker/local/nginx
+      dockerfile: Dockerfile
+    ports:
+      - "8080:80"
+    networks:
+      - booking-site
+
 networks:
   booking-site:
     driver: bridge
 
 volumes:
   postgres_data:
+  media_volume:
+  static_volume:
