feat: updated reservation list; reservation status; approve/decline reservation request

--- a/client/tempest/package.json
+++ b/client/tempest/package.json
@@ -19,6 +19,7 @@
     "react-dom": "19.1.0",
     "react-redux": "^9.2.0",
     "react-toastify": "^11.0.5",
+    "react-virtual-infinite-scroll-hook": "^1.0.0",
     "world-countries": "^5.1.0"
   },
   "devDependencies": {
