update nginx config

--- a/docker/local/nginx/default.conf
+++ b/docker/local/nginx/default.conf
@@ -12,6 +12,7 @@ upstream client {
 
 server {
     listen 80;
+    server_name 152.42.195.164;
     client_max_body_size 20M;
 
     location /mita {
