--- a/requirements.txt
+++ b/requirements.txt
@@ -9,7 +9,6 @@ django-autoslug==1.9.9
 django-phonenumber-field==8.1.0
 phonenumbers==9.0.3
 django-countries==7.6.1
-phonenumbers==9.0.3
 pillow==11.3.0
 django-filter==25.1
 redis==6.0.0
@@ -25,3 +24,8 @@ channels==4.3.1
 daphne==4.2.1
 channels_redis==4.3.0
 gunicorn==23.0.0
+pandas==2.3.3
+numpy==2.3.5
+scipy==1.16.3
+scikit-learn==1.8.0
+scikit-surprise==1.1.4
