--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -9,7 +9,7 @@ services:
       - static_volume:/app/static
       - media_volume:/app/media
     env_file:
-      - .env
+      - .env.prod
     restart: always
     depends_on:
       - db
