--- a/client/tempest/package.json
+++ b/client/tempest/package.json
@@ -12,6 +12,7 @@
     "@fullcalendar/daygrid": "^6.1.20",
     "@fullcalendar/interaction": "^6.1.20",
     "@fullcalendar/react": "^6.1.20",
+    "@recharts/devtools": "^0.0.5",
     "@reduxjs/toolkit": "^2.9.0",
     "antd": "^5.27.4",
     "autoprefixer": "^10.4.21",
@@ -25,6 +26,7 @@
     "react-redux": "^9.2.0",
     "react-toastify": "^11.0.5",
     "react-virtual-infinite-scroll-hook": "^1.0.0",
+    "recharts": "^3.6.0",
     "world-countries": "^5.1.0"
   },
   "devDependencies": {
